--- a/Languages/English/Keyed/Settings.xml
+++ b/Languages/English/Keyed/Settings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
-	<NoBreakdowns.Enabled>No Random Breakdowns Enabled</NoBreakdowns.Enabled>
-	<NoBreakdowns.Enabled.Alt>You can disable random breakdowns disabler just in case it causes problems or incompatibility.</NoBreakdowns.Enabled.Alt>
+	<BetterElectronics.NoBreakdowns.Enabled>No Random Breakdowns</BetterElectronics.NoBreakdowns.Enabled>
+	<BetterElectronics.NoBreakdowns.Enabled.Alt>You can disable random breakdowns disabler. Requires restart.</BetterElectronics.NoBreakdowns.Enabled.Alt>
+	<BetterElectronics.NoSolarFlare.Enabled>No Solar Flare</BetterElectronics.NoSolarFlare.Enabled>
+	<BetterElectronics.NoSolarFlare.Enabled.Alt>You can disable solar flare disabler. Requires restart.</BetterElectronics.NoSolarFlare.Enabled.Alt>
+	<BetterElectronics.NoShortCircuits.Enabled>No Short Circuits</BetterElectronics.NoShortCircuits.Enabled>
+	<BetterElectronics.NoShortCircuits.Enabled.Alt>You can disable short circuits disabler. Requires restart.</BetterElectronics.NoShortCircuits.Enabled.Alt>
 </LanguageData>
