--- a/Languages/Polish/Keyed/Settings.xml
+++ b/Languages/Polish/Keyed/Settings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
-	<NoBreakdowns.Enabled>Brak losowych awarii</NoBreakdowns.Enabled>
-	<NoBreakdowns.Enabled.Alt>Możesz włączyć spowrotem awarie, na wypadek gdyby ich wyłączenie powodowało problem lub niekompatybilność z inną modyfikacją.</NoBreakdowns.Enabled.Alt>
+	<BetterElectronics.NoBreakdowns.Enabled>Brak Losowych Awarii</BetterElectronics.NoBreakdowns.Enabled>
+	<BetterElectronics.NoBreakdowns.Enabled.Alt>Możesz włączyć awarie spowrotem. Wymaga restartu gry.</BetterElectronics.NoBreakdowns.Enabled.Alt>
+	<BetterElectronics.NoSolarFlare.Enabled>Brak Rozbłysków Słonecznych</BetterElectronics.NoSolarFlare.Enabled>
+	<BetterElectronics.NoSolarFlare.Enabled.Alt>Możesz włączyć rozbłyski słoneczne spowrotem. Wymaga restartu gry.</BetterElectronics.NoSolarFlare.Enabled.Alt>
+	<BetterElectronics.NoShortCircuits.Enabled>Brak Zwarć</BetterElectronics.NoShortCircuits.Enabled>
+	<BetterElectronics.NoShortCircuits.Enabled.Alt>Możesz włączyć zwarcia spowrotem. Wymaga restartu gry.</BetterElectronics.NoShortCircuits.Enabled.Alt>
 </LanguageData>
